[tool.poetry]
name = "cipher_aeh2196"
version = "0.1.0"
description = "mds hw07 practice package"
authors = ["Arielle Herman <aeh2196@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
